--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
-.App {
-  text-align: center;
+:root {
+  /* setting color scheme for site */
+  --dark: #222831;
+  --gray: #393e46;
+  --contrast: #00adb5;
+  --light: #eeeeee;
+
+  /* border settings */
+  --radius: 10px;
+
+  /* general color of items */
+  background: var(--dark);
+  color: var(--contrast);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1,
+h2,
+h3,
+h4,
+h5 {
+  color: var(--light);
+  margin: 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.listStyleNone {
+  list-style-type: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* header styling */
+header {
+  background: var(--contrast);
+  border-radius: var(--radius);
 }
 
-.App-link {
-  color: #61dafb;
+header a {
+  color: var(--light);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+header a:hover {
+  color: var(--dark);
+}
+
+header li .active {
+  color: var(--gray);
+}
+
+.bg-gray {
+  background-color: var(--gray);
+  border-radius: var(--radius);
+}
+
+.application {
+  margin: 5px;
+}
+
+#about p {
+  text-indent: 2em;
+}
+
+#about h3 + i {
+  opacity: 0.6;
+  margin: auto 0;
+}
+
+#portfolio img {
+  transition: transform 0.5s;
+  border: 1px solid var(--contrast);
+}
+
+#portfolio img:hover {
+  transform: scale(1.05);
 }
